--- a/Clase5.qmd
+++ b/Clase5.qmd
@@ -13,10 +13,6 @@ library(ggpubr)
 ```
 
 ```{r}
-summary(income.data) 
-```
-
-```{r}
 hist(income.data$happiness)
 ```
 
@@ -32,6 +28,12 @@ income.happiness.lm <- lm(happiness ~ income, data = income.data)
 summary(income.happiness.lm)
 ```
 
+par(mfrow=c(2,2))
+
+plot(income.happiness.lm)
+
+par(mfrow=c(1,1))
+
 ```{r}
 par(mfrow=c(2,2))
 plot(income.happiness.lm)
@@ -39,7 +41,87 @@ par(mfrow=c(1,1))
 ```
 
 ```{r}
-income.graph <- ggplot(income.data, aes(x=income, y=happiness))+
+income.graph<-ggplot(income.data, aes(x=income, y=happiness))+
                      geom_point()
 income.graph
+
+```
+
+```{r}
+income.graph <- income.graph + geom_smooth(method="lm", col="black")
+
+income.graph
+```
+
+```{r}
+#| label: asdasd
+#| message: true
+#| warning: true
+#| paged-print: true
+income.graph <- income.graph +
+  stat_regline_equation(label.x = 3, label.y = 7)
+
+income.graph
+```
+
+```{r}
+
+income.graph +
+  theme_bw() +
+  labs(title = "                                          Money does buy happiness!",
+      x = "Income (x$10,000)",
+      y = "Happiness score (0 to 10)")
+```
+
+```{r}
+mouse.data <- data.frame(
+weight=c(0.9, 1.8, 2.4, 3.5, 3.9, 4.4, 5.1, 5.6, 6.3),
+size=c(1.4, 2.6, 1.0, 3.7, 5.5, 3.2, 3.0, 4.9, 6.3))
+mouse.data # print the data to the screen in a nice format
+## plot a x/y scatter plot with the data
+plot(mouse.data$weight, mouse.data$size)
+## create a "linear model" - that is, do the regression
+mouse.regression <- lm(size ~ weight, data=mouse.data)
+## add the regression line to our x/y scatter plot
+abline(mouse.regression, col="blue")
+
+```
+
+```{r}
+hist(mouse.data$weight)
+```
+
+```{r}
+plot(size ~ weight, data = mouse.data)
+```
+
+```{r}
+size.weight.lm <- lm(size ~ weight, data = mouse.data)
+summary(size.weight.lm)
+```
+
+```{r}
+par(mfrow=c(2,2))
+plot(size.weight.lm)
+par(mfrow=c(1,1))
+```
+
+```{r}
+mouse.graph <-ggplot(mouse.data, aes(x=size, y=weight))+
+                     geom_point()
+mouse.graph
+```
+
+```{r}
+mouse.graph <- mouse.graph + geom_smooth(method="lm", col="black")
+
+mouse.graph
+```
+
+```{r}
+mouse.graph +
+  theme_bw() +
+  labs(title = "Rodents!",
+      x = "Size",
+      y = "Weight")
 ```
