--- a/Clase5.qmd
+++ b/Clase5.qmd
@@ -13,6 +13,8 @@ library(ggpubr)
 ```
 
 ```{r}
+
+income.data <- read.csv("Datos/income.data.csv")
 hist(income.data$happiness)
 ```
 
@@ -27,12 +29,6 @@ income.happiness.lm <- lm(happiness ~ income, data = income.data)
 ```{r}
 summary(income.happiness.lm)
 ```
-
-par(mfrow=c(2,2))
-
-plot(income.happiness.lm)
-
-par(mfrow=c(1,1))
 
 ```{r}
 par(mfrow=c(2,2))
